--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
 
 <body>
     <h1>Helloworld!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dignissimos repellat maxime mollitia? Dicta
-        tempora iste delectus nesciunt, ducimus, ratione non eum corrupti dolorum recusandae ipsam deleniti dolores
-        excepturi pariatur.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dignissimos repellat maxime mollitia?</p>
 </body>
 
 </html>
