--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 <body>
     <h1>Helloworld!</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores dignissimos repellat maxime mollitia?</p>
+
+    <br>
+    <h1>Todo List</h1>
+    <ul>
+        <li>1. Bangun Pagi</li>
+        <li>2. Beres-beres kamar</li>
+        <li>3. Mandi</li>
+    </ul>
 </body>
 
 </html>
