--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>1. Bangun Pagi</li>
         <li>2. Beres-beres kamar</li>
         <li>3. Mandi</li>
+        <li>4. Olahraga</li>
     </ul>
 </body>
 
